fix: Fix nav link distribution and main element spacing

--- a/src/sections/shared/components/main/Main.css
+++ b/src/sections/shared/components/main/Main.css
@@ -2,9 +2,9 @@
     .main {
         background-color: var(--color-grey-900);
         color: var(--color-grey-50);
-        padding: 0 var(--space-pad-100);
+        padding: var(--space-pad-100);
         display: flex;
         flex-direction: column;
-        gap: 3rem;
+        gap: 4.5rem;
     }
 }
