--- a/src/sections/shared/components/nav/Nav.css
+++ b/src/sections/shared/components/nav/Nav.css
@@ -4,21 +4,26 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 var(--space-pad-100);
+        padding: 1rem var(--space-pad-100);
 
         .nav__list {
             display: flex;
             gap: 1rem;
+            align-items: center;
         }
 
         .nav__link {
             color: var(--color-grey-200);
+            font-weight: 600;
             text-decoration: none;
-            transition: color 0.2s;
+            transition: all 0.2s;
+            height: 1.5rem;
+            padding: 0.75rem 1rem;
         }
 
         .nav__link--active {
             color: var(--color-warning-400);
+            font-size: 1.125rem;
         }
     }
 }
